<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_scanqr"
        android:icon="@drawable/ic_qr_scan_24dp"
        android:title="@string/title_scanqr" />

    <item
        android:id="@+id/navigation_admin_images"
        android:icon="@drawable/ic_image_24dp"
        android:title="@string/title_images"
        android:visible="false" />

    <item
        android:id="@+id/navigation_admin_profiles"
        android:icon="@drawable/ic_profiles_24dp"
        android:title="@string/title_profiles"
        android:visible="false" />

</menu>