<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.eventapp.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_scanqr"
        android:name="com.example.eventapp.ui.scanqr.ScanQrFragment"
        android:label="@string/title_scanqr"
        tools:layout="@layout/fragment_scan_qr" />

    <fragment
        android:id="@+id/navigation_admin_profiles"
        android:name="com.example.eventapp.ui.profiles.AdminProfilesFragment"
        android:label="@string/title_profiles"
        tools:layout="@layout/fragment_admin_profiles" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.eventapp.ui.profiles.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.example.eventapp.ui.profiles.ProfileEditFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_edit" />

    <fragment
        android:id="@+id/navigation_facilities"
        android:name="com.example.eventapp.ui.profiles.FacilitiesFragment"
        android:label="@string/title_facilities"
        tools:layout="@layout/fragment_facilities" />

    <fragment
        android:id="@+id/navigation_facility_edit"
        android:name="com.example.eventapp.ui.profiles.FacilityEditFragment"
        android:label="@string/title_facility_edit"
        tools:layout="@layout/fragment_facility_edit" />

    <fragment
        android:id="@+id/navigation_facility_add"
        android:name="com.example.eventapp.ui.profiles.FacilityAddFragment"
        android:label="@string/title_facility_add"
        tools:layout="@layout/fragment_facility_add" />
</navigation>