<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_info_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/scrimBackground">

    <ImageView
        android:id="@+id/image_info_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/selected_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RedundantDescriptionCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/image_info_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.8"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        app:backgroundTint="?attr/colorSurface"
        app:fabCustomSize="48dp"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="28dp"
        app:srcCompat="@drawable/baseline_close_24" />

    <Button
        android:id="@+id/image_info_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="?attr/colorError"
        android:text="@string/delete_image"
        android:textColor="?attr/textColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_info_type_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:cardBackgroundColor="?attr/colorOnSurface"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/image_info_name_card"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_info_name_card">

        <TextView
            android:id="@+id/image_info_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="?attr/textColor" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/image_info_name_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        app:cardBackgroundColor="?attr/colorOnSurface"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_info_type_card"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/image_info_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="?attr/textColor" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>