<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_edit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_edit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-20dp"
        android:clickable="true"
        android:contentDescription="@string/delete_facility"
        android:focusable="true"
        android:visibility="gone"
        app:backgroundTint="?attr/colorError"
        app:layout_constraintEnd_toEndOf="@+id/profile_edit_top_card"
        app:layout_constraintTop_toTopOf="@+id/profile_edit_top_card"
        app:srcCompat="@drawable/ic_delete_cross_24dp"
        app:tint="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_edit_top_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="20dp"
        app:contentPadding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_edit_top_container"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profile_edit_remove_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                android:contentDescription="@string/remove_photo"
                android:focusable="true"
                android:visibility="gone"
                app:backgroundTint="?attr/colorError"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="@+id/profile_edit_photo_card"
                app:layout_constraintTop_toTopOf="@+id/profile_edit_photo_card"
                app:maxImageSize="24dp"
                app:srcCompat="@drawable/ic_subtract_minus_24dp"
                app:tint="@color/white" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_edit_photo_card"
                android:layout_width="178dp"
                android:layout_height="178dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#00FFFFFF"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_edit_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_dashboard_profile_24dp"
                    tools:ignore="ImageContrastCheck" />

                <View
                    android:id="@+id/profile_edit_photo_darken"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/material_dynamic_neutral0" />

                <ImageView
                    android:id="@+id/profile_edit_photo_modify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/modify_profile_photo"
                    android:padding="30dp"
                    app:srcCompat="@drawable/ic_add_photo_alternate_24dp"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_edit_bottom_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="?attr/colorOnSurface"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp"
                app:contentPaddingBottom="30dp"
                app:contentPaddingTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_edit_photo_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_edit_bottom_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperText="* Required"
                        app:helperTextTextColor="?attr/colorError"
                        app:layout_constraintBottom_toTopOf="@+id/profile_edit_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/profile_edit_name_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="name"
                            android:ems="10"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:textColor="?attr/textColor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toTopOf="@+id/profile_edit_phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_edit_name">

                        <EditText
                            android:id="@+id/profile_edit_email_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:ems="10"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:textColor="?attr/textColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_edit_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/profile_edit_notifications"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_edit_email">

                        <EditText
                            android:id="@+id/profile_edit_phone_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="phone"
                            android:ems="10"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:textColor="?attr/textColor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/profile_edit_notifications"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/textColorDark"
                        android:text="@string/opt_out_of_notifications"
                        android:textColor="@color/design_default_color_background"
                        app:layout_constraintBottom_toTopOf="@+id/profile_edit_is_organizer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <CheckBox
                        android:id="@+id/profile_edit_is_organizer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="?attr/textColorDark"
                        android:text="@string/organizer_account"
                        android:textColor="@color/design_default_color_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>