<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/handle"
        android:layout_width="120dp"
        android:layout_height="6dp"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/material_dynamic_neutral_variant60"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="@string/edit_profile_desc"
        android:focusable="true"
        android:src="@drawable/ic_edit_pencil_24dp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/profile_info_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_info_top_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="20dp"
                app:contentPadding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_info_top_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profile_info_photo_card"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardCornerRadius="100dp"
                        app:layout_constraintDimensionRatio="w,1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/profile_info_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/profile_image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_dashboard_profile_24dp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/profile_info_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textAlignment="center"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/profile_info_photo_card"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_info_bottom_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="?attr/colorOnSurface"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_info_top_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_info_bottom_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/profile_info_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_email"
                        android:textAlignment="center"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/profile_info_phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_info_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/no_phone_number"
                        android:textAlignment="center"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/profile_info_id"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_info_email" />

                    <TextView
                        android:id="@+id/profile_info_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_user_id"
                        android:textAlignment="center"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_info_phone" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_info_manage_facilities_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_info_bottom_card">

                <Button
                    android:id="@+id/profile_info_manage_facilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/material_dynamic_primary50"
                    android:checkable="false"
                    android:text="@string/manage_facilities"
                    android:textColor="@android:color/primary_text_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>